--- a/tasks/02_configure.yml
+++ b/tasks/02_configure.yml
@@ -13,6 +13,10 @@
       ansible.builtin.set_fact:
         fish_aliases: "{{ fish_aliases_role + fish_aliases_host }}"
 
+    - name: Combine default keybindings with host-specific keybindings
+      ansible.builtin.set_fact:
+        fish_keybindings: "{{ fish_keybindings_role + fish_keybindings_host }}"
+
     - name: Ensure config folder exists
       ansible.builtin.file:
         path: "{{ fish_config_dir }}"
