--- a/tasks/noauto_install_dep_Archlinux.yml
+++ b/tasks/noauto_install_dep_Archlinux.yml
@@ -14,6 +14,6 @@
 
     - name: Ensure fish is installed
       community.general.pacman:
-        name: "{{ fish_distro_pkgs }}"
+        name: "{{ fish_dep_pkgs }}"
         state: present
       become: true
