feat: Addition of additional config option

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -50,3 +50,6 @@ fish_functions: []
 #    name: example
 #    description: "example"
 #    command: "example"
+
+fish_additional_config: []
+# - "zoxide init fish | source"
