--- a/tasks/noauto_install_package.yml
+++ b/tasks/noauto_install_package.yml
@@ -1,11 +1,43 @@
 ---
 - name: Install fish OS-specifically via package
-  ansible.builtin.include_tasks: "{{ var_file }}"
-  with_first_found:
-    - "noauto_install_{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
-    - "noauto_install_{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
-    - "noauto_install_{{ ansible_distribution }}.yml"
-    - "noauto_install_{{ ansible_os_family }}.yml"
-    - "noauto_install_{{ ansible_lsb.id }}.yml"
-  loop_control:
-    loop_var: var_file
+  block:
+    - name: Import installed fish version check
+      ansible.builtin.include_tasks: noauto_check_installed_version.yml
+      when: fish_installed_version is not defined
+
+    - name: Check fish pkg mgr version
+      ansible.builtin.include_tasks: "{{ task_file }}"
+      with_first_found:
+        - "noauto_check_pkg_mgr_version_{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+        - "noauto_check_pkg_mgr_version_{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
+        - "noauto_check_pkg_mgr_version_{{ ansible_distribution }}.yml"
+        - "noauto_check_pkg_mgr_version_{{ ansible_os_family }}.yml"
+        - "noauto_check_pkg_mgr_version_{{ ansible_lsb.id }}.yml"
+      loop_control:
+        loop_var: task_file
+
+    - name: Force install if the version numbers do not match
+      ansible.builtin.set_fact:
+        fish_force_install: true
+      when:
+        - fish_installed_version is defined
+        - fish_pkg_mgr_version is defined
+        - fish_installed_version != fish_pkg_mgr_version
+
+    - name: Install fish package
+      when: fish_installed_version is not defined or fish_force_install
+      block:
+        - name: Uninstall current fish installation
+          ansible.builtin.include_tasks: noauto_uninstall.yml
+          when: fish_installed_version is defined and fish_installed_version != ""
+
+        - name: Install fish OS-specifically via package
+          ansible.builtin.include_tasks: "{{ task_file }}"
+          with_first_found:
+            - "noauto_install_{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+            - "noauto_install_{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
+            - "noauto_install_{{ ansible_distribution }}.yml"
+            - "noauto_install_{{ ansible_os_family }}.yml"
+            - "noauto_install_{{ ansible_lsb.id }}.yml"
+          loop_control:
+            loop_var: task_file
