--- a/tasks/noauto_uninstall_Debian.yml
+++ b/tasks/noauto_uninstall_Debian.yml
@@ -4,7 +4,7 @@
     msg: "This role only supports {{ ansible_os_family }} systems that use apt as a package manager."
   when: ansible_pkg_mgr != "apt"
 
-- name: Install fish via apt
+- name: Uninstall fish in apt
   block:
     - name: Update apt cache
       ansible.builtin.apt:
@@ -12,8 +12,8 @@
         cache_valid_time: 3600
       become: true
 
-    - name: Ensure fish is installed
+    - name: Remove fish if it is installed
       ansible.builtin.apt:
         name: "{{ fish_distro_pkgs }}"
-        state: present
+        state: absent
       become: true
