--- a/tasks/01_install.yml
+++ b/tasks/01_install.yml
@@ -13,7 +13,7 @@
         loop_var: var_file
 
     - name: Install OS-specific dependencies
-      ansible.builtin.include_tasks: "{{ var_file }}"
+      ansible.builtin.include_tasks: "{{ task_file }}"
       with_first_found:
         - "noauto_install_dep_{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
         - "noauto_install_dep_{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
@@ -21,7 +21,7 @@
         - "noauto_install_dep_{{ ansible_os_family }}.yml"
         - "noauto_install_dep_{{ ansible_lsb.id }}.yml"
       loop_control:
-        loop_var: var_file
+        loop_var: task_file
 
     - name: Install fish
       ansible.builtin.include_tasks:
