--- a/tasks/noauto_install_build_Debian.yml
+++ b/tasks/noauto_install_build_Debian.yml
@@ -4,7 +4,7 @@
     msg: "This role only supports {{ ansible_os_family }} systems that use apt as a package manager."
   when: ansible_pkg_mgr != "apt"
 
-- name: Install fish via apt
+- name: Install fish dependencies via apt
   block:
     - name: Update apt cache
       ansible.builtin.apt:
@@ -12,8 +12,8 @@
         cache_valid_time: 3600
       become: true
 
-    - name: Ensure fish is installed
+    - name: Ensure fish build pkgs are installed
       ansible.builtin.apt:
-        name: "{{ fish_distro_pkgs }}"
+        name: "{{ fish_build_pkgs }}"
         state: present
       become: true
