--- a/tasks/noauto_install_dep_Debian.yml
+++ b/tasks/noauto_install_dep_Debian.yml
@@ -4,8 +4,7 @@
     msg: "This role only supports {{ ansible_os_family }} systems that use apt as a package manager."
   when: ansible_pkg_mgr != "apt"
 
-- name: Install fish via apt
-  when: ansible_pkg_mgr == "apt"
+- name: Install fish dependencies via apt
   block:
     - name: Update apt cache
       ansible.builtin.apt:
@@ -13,7 +12,7 @@
         cache_valid_time: 3600
       become: true
 
-    - name: Ensure fish is installed
+    - name: Ensure fish dependencies are installed
       ansible.builtin.apt:
         name: "{{ fish_dep_pkgs }}"
         state: present
