feat: Addition of ubuntu support

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
         distro:
           - debian12
           - archlinux
+          - ubuntu2404
 
     steps:
       - name: Check out the codebase
