--- a/tasks/noauto_install_source.yml
+++ b/tasks/noauto_install_source.yml
@@ -50,10 +50,11 @@
 
         - name: Configure fish
           ansible.builtin.command:
-            cmd: cmake -DCMAKE_INSTALL_PREFIX=/usr/local .
+            cmd: cmake .
             chdir: "{{ fish_download_dir }}/fish-shell-{{ fish_version }}"
+          environment:
+            PATH: "{{ ansible_env.HOME }}/.cargo/bin:{{ ansible_env.PATH }}"
           changed_when: true
-          become: true
 
         - name: Determine parallel build jobs
           ansible.builtin.set_fact:
@@ -66,13 +67,15 @@
           environment:
             # Avoid build.rs panic when git isn't available or the source isn't a git repo
             FISH_BUILD_VERSION: "{{ fish_version }}"
+            PATH: "{{ ansible_env.HOME }}/.cargo/bin:{{ ansible_env.PATH }}"
           changed_when: true
-          become: true
 
         - name: Install fish
           ansible.builtin.command:
             cmd: make install
             chdir: "{{ fish_download_dir }}/fish-shell-{{ fish_version }}"
+          environment:
+            FISH_BUILD_VERSION: "{{ fish_version }}"
           changed_when: true
           become: true
 
