--- a/tasks/noauto_uninstall_Archlinux.yml
+++ b/tasks/noauto_uninstall_Archlinux.yml
@@ -13,6 +13,9 @@
 
     - name: Remove fish if it is installed
       community.general.pacman:
-        name: "{{ fish_distro_pkgs }}"
+        name: "{{ package }}"
         state: absent
+      loop: "{{ fish_distro_pkgs }}"
+      loop_control:
+        loop_var: package
       become: true
