--- a/tasks/noauto_install_Debian.yml
+++ b/tasks/noauto_install_Debian.yml
@@ -14,6 +14,9 @@
 
     - name: Ensure fish is installed
       ansible.builtin.apt:
-        name: "{{ fish_distro_pkgs }}"
+        name: "{{ package }}"
         state: present
+      loop: "{{ fish_distro_pkgs }}"
+      loop_control:
+        loop_var: package
       become: true
