--- a/tasks/noauto_install_build_Archlinux.yml
+++ b/tasks/noauto_install_build_Archlinux.yml
@@ -13,6 +13,9 @@
 
     - name: Ensure fish build pkgs are installed
       community.general.pacman:
-        name: "{{ fish_build_pkgs }}"
+        name: "{{ package }}"
         state: present
+      loop: "{{ fish_build_pkgs }}"
+      loop_control:
+        loop_var: package
       become: true
