--- a/tasks/noauto_install_dep_Debian.yml
+++ b/tasks/noauto_install_dep_Debian.yml
@@ -14,6 +14,9 @@
 
     - name: Ensure fish dependencies are installed
       ansible.builtin.apt:
-        name: "{{ fish_dep_pkgs }}"
+        name: "{{ package }}"
         state: present
+      loop: "{{ fish_dep_pkgs }}"
+      loop_control:
+        loop_var: package
       become: true
